--- a/index.html
+++ b/index.html
@@ -23,12 +23,10 @@
     <main>
       <section>
         <div class="card-component">
-          <div class="card-image">
-            <img src="./images/image-header-mobile.jpg" alt="" />
-          </div>
+          <div class="card-image"></div>
           <div class="card-descriptions">
-            <h1>Get insights that help your business grow.</h1>
-            <p>
+            <h1>Get <span>insights</span> that help your business grow.</h1>
+            <p class="description">
               Discover the benefits of data analytics and make better decisions
               regarding revenue, customer experience, and overall efficiency.
             </p>
