--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
         >. Coded by
-        <a href="https://github.com/brayanbarroso/stats-card-component"
+        <a
+          href="https://github.com/brayanbarroso/stats-card-component"
+          target="_blank"
           >Brayan Barroso</a
         >.
       </div>
